--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <li>Music Production and Performance</li>
         </ul>
 		
-		<p>There is a common misconception in the programming field that a dichotomy exists between those who design and those
+		<p>There is a common misconception TEST in the programming field that a dichotomy exists between those who design and those
 		who program. However, there is definitely a middleground between both camps and this is where my skills reside. By
 		combining my communications and technical education and work experience, I am an apt and passionate intermediary as
 		well as a creative designer and programmer. Currently, my emphasis is on Front-End Development, using the following programming languages and 
