adds grid layout to writings section and deletes web dev section

--- a/index.html
+++ b/index.html
@@ -75,14 +75,11 @@
 
 	<div class="container-fluid">
    
-	<table id="nav" border="0"><!--table for header to keep logo aligned with title-->
-        <tr>
-        	<td id="name"><h1 id="main_header">Brian Kidd<span style = "color:red">:</span><br>Web<span style="color:red"> and </span>Multimedia Developer</h1></td>
-			<td width="35%"><img src = "images/BK_Logo3.png" id="main_logo" alt="main_logo"></td>
-			
-		</tr>
-	</table>
-	<!--end logo table -->
+	<div class="header-content">
+		<div class="header-text">
+			<h1 id="main_header">Brian Kidd<span style = "color:red"> | </span>Multimedia Portfolio <img src = "images/BK_Logo3.png" id="main_logo" alt="main_logo"></h1>
+		</div>
+	</div>
 	
 	</div><!-- end container -->
  </header><!-- end header -->
@@ -104,7 +101,6 @@
       <li><a href="index.html">About</a></li> 
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Work <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a class = "dropdown-item" href="#about">Web Development</a></li>
           <li><a class = "dropdown-item" href="#writings">Writings</a></li>
           <li><a class = "dropdown-item" href="#music_production">Music Production</a></li>
         </ul>
@@ -137,133 +133,83 @@
 		 <div class = "col-xl-8 col-lg-6 col-md-6 col-sm-12">
         <h1>About Me</h1>
         <ul id = "skills">
-        	<li>Web Design and Developing</li>
-			<li>Application Development and Testing</li>
-            <li>Web Content Writing and Editing</li>
+			<li>Web Production</li>
+			<li>Journalism</li>
+			<li>Web Content Writing and Editing</li>
             <li>Video and Audio Production</li>
             <li>Music Production and Performance</li>
+        	<li>For my web development work visit <a href="https://www.briankiddmedia.com" target="_blank">briankiddmedia.com</a> </li>
+         
         </ul>
 		
-		<p>There is a common misconception TEST in the programming field that a dichotomy exists between those who design and those
+		<p>There is a common misconception in the programming field that a dichotomy exists between those who design and those
 		who program. However, there is definitely a middleground between both camps and this is where my skills reside. By
 		combining my communications and technical education and work experience, I am an apt and passionate intermediary as
-		well as a creative designer and programmer. Currently, my emphasis is on Front-End Development, using the following programming languages and 
-		content management systems:</p> 
-			<ul>
-			<li>HTML5</li>
-				<li>CSS3</li>
-				<li>JavaScript</li>
-				<li>jQuery</li>
-				<li>PHP</li>
-				<li>React</li>
-				<li>AngularJS</li>
-				<li>WordPress</li>
-				<li>Drupal</li>
-			</ul>
+		well as a creative designer, content writer, and programmer.</p> 
          </div>
 		 
 		<div class = "col-xl-4 col-lg-6 col-md-6 col-sm-12 ">		 
-			<img class = "img-responsive" src = "images/BKLinkedIn.jpg" alt="briankidd_profile_photo" id="profile_photo">
+			<img class = "img-responsive" src = "images/brian-kidd-linkedin.jpg" alt="briankidd_profile_photo" id="profile_photo">
 		</div>		 
          </section>
 		 </div> 
 	</div><!-- end about -->
 	
-	<div id ="web_development" class="container-fluid"><!-- begin web development -->
-	<div class = "row">
-    <section>
-	<div class = "col-xl-6 col-lg-6 col-md-6 col-sm-12">
-		<h1>Web Development</h1><!-- web development text -->
-		<div id = "web_development_text">
-		<p>Web development and design are two of my greatest passions. I find it very rewarding to work with a client
-		in order to bring his or her vision to a reality. Click on any of the slides to see some of the projects
-		I have worked on.</p>
-		
-		<p>
-		To me, at its core, web developing is engineering websites using Hypertext Markup Language (HTML: a markup language) and Cascading Style Sheets (CSS: a style sheet
-		language). These languages mostly affect the <span style = "font-style:italic;">appearance</span> of a website. Most of the time, HTML and CSS are combined 
-		with programming languages that use logical instructions to tell the computer and in turn the web browser what to do depending on user interaction 
-		(e.g. JavaScript, PHP, Python). These languages mostly affect the<span style = "font-style:italic;"> functionality</span> of a website. 
-		</p>
-		
-		<p>
-		But just as importantly, to me web developing is creating a space in which one can communicate his or her ideas to the entire world. It is just as right-brained
-		as it is left-brained, and there is nothing quite like the buzz of coming up with the many solutions that it takes to build a website that is both 
-		attractive and user-friendly. Like the web and its many languages, my communications and programming skills are expanding every single day, 
-		and I am excited to find out where they will take me. 
-		</p>
-		
-		</div>
-	</div>
 	
-	<div class = "col-xl-6 col-lg-6 col-md-6 col-sm-12">
-	
-	<div class="lazy slider" data-sizes="50vw">
-	 <a href="http://lifeseedacupuncture.com" target="_blank" id="lifeSeedSlider">
-	  <img class = "img-responsive"  src="images/lifeSeed.jpg" alt="Life Seed Acupuncture"></a>
-    <div>
-      <a href="http://www.kylmyys.com" target="blank">
-      <img class = "img-responsive"  src="images/kylmyysSite.jpg" alt="kylmyys_band" id="kylmyys_band"></a>
-    </div>
-    <div>
-      <a href="http://programajama.com/bkidd/testingGround/steve's_cafe_2.0/" target="_blank" id="steves_cafe">
-	  <img class = "img-responsive"  src="images/steves_cafe.png" alt="Steves_Cafe"></a>
-    </div>
-    <div>
-     <a href="http://www.kylmyysmedia.com" target="_blank" id="kylmyys_media">
-      <img class = "img-responsive"  src="images/kmml.png" alt="kylmyys_media"></a>
-    </div>
-    <div>
-      <a href="http://www.vamposcura.com" target="_blank">
-      <img class = "img-responsive"  src="images/VampOscura.jpg" alt="vamp_oscura"></a>
-    </div>
-  </div>
-	
-</div>
-
-	</section></div><!-- end Web Development -->
-</div>
 	
 <div id ="writings" class="container-fluid"><!-- writings -->
 	<div class = "row">
 	
-	<section class="slick_slider">
+	<section>
 	<div class = "col-sm-12">
 	<h1>Writings</h1><p>Selected articles and stories. More to come soon...</p>
 	
-	
-			<div class="regular slider">
-    <div>
-      <a href = "http://www.dailyuw.com/arts_and_leisure/article_305a2e04-ac3a-5209-b53e-15051b7841ee.html" target="_blank">
-      <img class="writingsImages" src="writings/waking_life.png" alt="waking life"></a>
-    </div>
-    <div>
-       <a href = "http://originarts.com/reviews/review.php?ReviewID=121" target="_blank">
-      <img class="writingsImages" src="writings/mattj_hope.png" alt="matt jorgensen, Hope"></a>
-    </div>
-    <div>
-     <a href = "writings/monkey_chronicles.pdf" target="_blank">
-      <img class="writingsImages" src="writings/monkey_chronicles.png" alt="little_monkey_chronicles"></a>
-    </div>
-    <div>
-      <a href = "http://www.dailyuw.com/arts_and_leisure/article_09a5d602-d937-5ec5-aaa3-6b203b825e16.html" target="_blank">
-      <img class="writingsImages" src="writings/chris_thompson.png" alt = "chris_thompson_tattoo_artist" id="chris_t"></a>
-    </div>
-    <div>
-      		<a href="http://tabletseattle.com/90/music/90_pretty_hot_poop.shtml" target="_blank">
-      <img class="writingsImages" src="writings/death_cab.jpg" alt="death_cab"></a>
-    </div>
-	 <div>
-      <a href="http://tabletseattle.com/92/arts/92_damon_packard.shtml" target="_blank">
-      <img class="writingsImages" src="writings/packard.png" alt="Damon_Packard"></a>
-    </div>
-	<div>
-		<a href="writings/AVTMF.pdf" target="_blank">
-      <img class="writingsImages" src="writings/AVTMF.png" alt="a_visit_to_my_folks"></a>
-    </div>
-	
-	
-		</div><!-- end regular slider-->
+	<div class="writings-grid">
+		<div class="writing-item">
+			<a href="https://www.dailyuw.com/article/305a2e04-ac3a-5209-b53e-15051b7841ee" target="_blank">
+				<img class="writingsImages" src="writings/waking_life.png" alt="waking life">
+				<div class="writing-overlay">
+					<div class="writing-text">Richard Linklater: Waking Life-Interview</div>
+				</div>
+			</a>
+		</div>
+		
+		<div class="writing-item">
+			<a href="http://originarts.com/reviews/review.php?ReviewID=121" target="_blank">
+				<img class="writingsImages" src="writings/mattj_hope.png" alt="matt jorgensen, Hope">
+				<div class="writing-overlay">
+					<div class="writing-text">Album Review: Matt Jorgensen - Hope</div>
+				</div>
+			</a>
+		</div>
+		
+		<div class="writing-item">
+			<a href="writings/monkey_chronicles.pdf" target="_blank">
+				<img class="writingsImages" src="writings/monkey_chronicles.png" alt="little_monkey_chronicles">
+				<div class="writing-overlay">
+					<div class="writing-text">Short Story: Little Monkey Chronicles</div>
+				</div>
+			</a>
+		</div>
+
+		<div class="writing-item">
+			<a href="https://www.dailyuw.com/article/427286eb-a7e7-562f-82df-d1396a05a85c" target="_blank">
+				<img class="writingsImages" src="writings/death-cab-for-cutie-album.jpg" alt="death cab for cutie–The Photo Album ">
+				<div class="writing-overlay">
+					<div class="writing-text">Album Review: Death Cab for Cutie</div>
+				</div>
+			</a>
+		</div>
+		
+		<div class="writing-item">
+			<a href="https://www.dailyuw.com/article/09a5d602-d937-5ec5-aaa3-6b203b825e16" target="_blank">
+				<img class="writingsImages" src="writings/chris_thompson.png" alt="chris_thompson_tattoo_artist">
+				<div class="writing-overlay">
+					<div class="writing-text">Artist Profile: Chris Thompson</div>
+				</div>
+			</a>
+		</div>
+	</div>
 
 	</div><!--end div class -->
  
