adds correct link to fb social media icon

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 	<!--  <li class="active"><a href="testingGround/">Testing Ground</a></li><!--for Programajama, or other testing host, only -->
     </ul>
 	
-	
+		<a class="social-icons" href="https://www.facebook.com/holisticprogrammer/" target="_blank"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
 		<a class="social-icons" href="https://www.linkedin.com/in/briankidd9design" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
-		<a class="social-icons" href="https://www.facebook.com/briankidd9design" target="_blank"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+	
 
   </div>
   </div>
