adds a contact button to the nav bar

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         </ul>
       </li>
       <li><a href="https://briankiddmedia.com" target="_blank">Web Dev</a></li>
+      <li><a href="mailto:brian.kidd.one@gmail.com" class="contact-btn">Contact Me</a></li>
 	<!--  <li class="active"><a href="testingGround/">Testing Ground</a></li><!--for Programajama, or other testing host, only -->
     </ul>
 	
