--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <ul class="nav navbar-nav">
 	
       <li class="active"><a href="#">Home</a></li>
-      <li><a href="index.html">About</a></li> 
+      <li><a href="#about">About</a></li> 
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Work <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a class = "dropdown-item" href="#writings">Writings</a></li>
@@ -314,6 +314,7 @@
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 	<script src="js/slick.js"></script><!-- script for slick slider -->
 	<script src="js/script.js"></script>
+	
 	<!-- end JS and jQuery Code -->
 
     </div><!-- end wrapper-->
